# phantom-paradox

./: .gitignore  ACTIVATE_ZK_PRIVACY_NOW.md  ADDRESSING_CONCERNS_ACTION_PLAN.md  AGENT_MEMO.md  AI_AGENT_COMPLETE_PAYMENT_REWARDS_FEES_SPECIFICATION.txt  AI_AGENT_CREATION_SYSTEM_DESIGN.txt  AI_SENTINEL_ENHANCEMENT_COMPLETE.md  AI_SENTINEL_INTEGRATION_COMPLETE.md  ANCHOR_FIX_LOG.md  ANON_DIAGRAM.html  ANON_PAYMENT_DIAGRAM.md  ARBITRUM_FAILOVER_MISSING_COMPONENTS.md  ARMAGEDDON_SAFETY_DOCUMENTATION.md  Anchor.toml  BOOKKEEPER_SENTINEL_DESIGN.md  COMPLETE_STACK_DOCUMENTATION.txt  COMPREHENSIVE_ENGINE_TECHNICAL_EXPLANATION.txt  COMPRESSION_RAW_CPI_FIX.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_APPLIED_FINAL.md  CRITICAL_MISSING_PIECES_ASSESSMENT.md  Cargo.toml  DEPLOYMENT_CHECKLIST_QUICK_FIXES.txt  DEPLOYMENT_ONE_CLICK.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_V3_INFO.md  DEVNET_CRITICAL_FIXES_SUMMARY.md  DEVNET_DEPLOYMENT_WORKPLAN_TONIGHT.txt  DEVNET_READINESS_FINAL_CHECK.txt  DEVNET_READINESS_REPORT.txt  DIAGRAMS_INS_TX.md  EXPLAIN_INS_VS_TX.md  FEE_FIXES_APPLIED_SUMMARY.md  FEE_MODELS_COMPLETE_BREAKDOWN.txt  FINAL_SECURITY_SCAN_COMPLETE.md  FINAL_SECURITY_SCAN_REPORT.md  FINAL_SECURITY_STATUS_100_PERCENT_CHECK.md  FRONTEND_INTEGRATION_SUMMARY.md  (+43 more)
.github/workflows/: build-android.yml  ci.yml  enforce-secrets.yml  simulation.yml
.null/agents/android/: build.gradle.kts  gradlew
.null/docs/: agents.html
agents/: README.md
agents/android/: settings.gradle.kts
agents/android/app/: build.gradle.kts
agents/browser-extension/: README.md  manifest.json
agents/browser-extension/chromium/: manifest.json
agents/browser-extension/firefox/: manifest.json
agents/browser-extension/safari/: README.md
agents/browser-extension/src/: background.js  popup.html  popup.js
agents/desktop/: Cargo.toml
agents/phantom-box/: README.md
agents/phantom-box/scripts/: build-image.sh  setup.sh
api/intents/: submit.js
assets/nulla/: nulla-core.js  p-shell.js
assets/nulla/mods/: example-mods.js
backend/src/services/: JobManager.ts
docs/: PROOF_SYSTEM.md  agents.html  anonymity.html  api.html  compare.html  compression.html  lab.html  null-project.html  nulla-debug.html  sim.html  test.html  token.html  verify.html  warroom.html
docs/agent-app/: index.html
docs/nulla/: index.html
docs/nulla/assets/: index-BFLNet1C.css  index-BHzcmkH8.css  index-CYdpSpHY.js  index-DuAArPLv.js  index-bKZI3Yp7.js  ipfs-ZpRCh8Ce.js
frontend/: landing-page-updates.html
nulla-app/: index.html  package-lock.json  package.json  vite.config.ts
nulla-app/knowledge/: NULLA_ADVANCED_USE_CASES.md  NULLA_ARCHITECTURE_DEEP_DIVE.md  NULLA_KNOWLEDGE_BASE.md  NULLA_OFFICIAL_LINKS.md  NULLA_PR_RESPONSES.md  NULLA_QA_TRAINING.md
nulla-app/src/: App.css  App.tsx
nulla-app/src/brain/: index.ts  personality.ts  router.ts  types.ts
nulla-app/src/components/: NullaAvatar.tsx  NullaChat.tsx
nulla-app/src/soul/: arweave.ts  ipfs.ts
offchain/: blackmirror_engine.js  package-lock.json  package.json  payout_server.js  tsconfig.json
offchain/idl/: phantom_paradox.json
offchain/migrations/: 001_add_notifications.sql  002_add_session_key_volume.sql  003_add_worker_profiles.sql
offchain/scripts/: deploy-devnet-one-click.js
offchain/src/analyst/: analyst.ts
offchain/src/api/: auctionRoutes.ts  mobile_bridge.ts  routes.ts  server.ts  stats.ts  worker.ts
offchain/src/bundler/: virtualBundler.ts
offchain/src/chaos/: chaosTester.ts
offchain/src/compression/: treeBuilder.ts
offchain/src/configGuardian/: configGuardian.ts
offchain/src/housekeeper/: housekeeper.ts
offchain/src/indexer/: analytics.ts  indexer.ts  integration.ts  leaderboards.ts  service.ts  stateRootIndexer.ts  stateRootListener.ts
offchain/src/integrations/: meteora.ts  meteoraMock.ts
offchain/src/jobs/: matcher.ts
offchain/src/listener/: listener.ts
offchain/src/multichain/: chainHealth.ts  chainSwitcher.ts  doubleSpendPrevention.ts  stateSnapshot.ts
offchain/src/netting/: compressedSettlement.ts  fastGraph.ts  graph.ts  types.ts  (+4 more)
programs/pdox_stake/: Cargo.toml
programs/pdox_stake/src/: lib.rs
programs/phantomgrid_gaming/: Cargo.toml  Cargo.toml.workaround
programs/phantomgrid_gaming/src/: error.rs  lib.rs
programs/phantomgrid_gaming/src/instructions/: agent_vault.rs  black_ledger.rs  dispute_jury.rs  hydra.rs  integration_config.rs  job_marketplace.rs  location_dispute.rs  lp_growth.rs  marketplace.rs  mod.rs  vesting.rs
programs/phantomgrid_gaming/src/state/: compression.rs  hydra.rs  mod.rs
programs/phantomgrid_gaming/src/zk/: mod.rs
scripts/: blackmirror_engine.js  deploy-all-automated.ps1  deploy-devnet-safe.ps1  deploy-production.ps1  deploy-production.sh  do_payout.js  fund_blackmirror.js  live_test.ts  test_anonymization_proof.ts  test_jury_system.ts
scripts/sml/: dispute_sml_model.py  sml_indexer.ts
scripts/testing/: anon_payment_test.js  fund_shards.js  package-lock.json  package.json  setup_anon_infra.js  setup_shards.js
scripts/tokenomics/: add_liquidity.js  add_liquidity_auto.js  add_liquidity_v2.js  bootstrap_launder.ts  bootstrap_launder_10x.ts  check_sdk.js  check_vaults.ts  create_game.ts  create_hydra_wallets.ts  create_meteora_pool.ts  create_pool_now.js  create_pool_now.ts  create_pool_v2.js  final_demo.ts  final_true_anon.ts  fund_and_transfer.ts  init_meteora_pool.ts  launch_devnet_pool.ts  launch_meteora_final.js  launch_meteora_final.ts  launch_pool_v2.js  launch_raydium_clmm.js  live_test.ts  mint_pdox.ts  mock_lp_operations.ts  package-lock.json  package.json  send_all_pdox.ts  setup_mock_lp.ts  test_anon_payment.ts  test_full_hydra_flow.ts  test_full_protocol.ts  test_hydra_system.ts  test_temporal_paradox.ts  test_ultimate_anon.ts  test_vault_anon_flow.ts  true_anon_transfer.ts  tsconfig.json  verify_anon_payment.ts
scripts/trading/: orca_whirlpool_bot.js  real_trading_bot.js  start_trading_bot.ps1  trading_bots.js  trading_bots_run.js
simulation/: package.json  simulate.js
tests/: settle_net_batch.spec.ts
(+125 files in other folders)
