[package]
name = "pdox-stake"
version = "0.1.0"
description = "PDOX staking contract for Phantom Paradox agent network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pdox_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

