[package]
name = "phantom_paradox"
version = "2.0.0"
edition = "2021"
description = "PHANTOM PARADOX - HyperScale Edition | Zero-Rent Compression Engine for Enterprise Gaming Marketplaces"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phantomgrid/gaming"
readme = "README.md"
keywords = ["solana", "gaming", "marketplace", "nft", "auction", "compression", "zk", "enterprise"]
categories = ["blockchain", "gaming"]

[lib]
crate-type = ["cdylib", "lib"]
name = "phantom_paradox"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# NOTE: Default set to core-only due to Anchor 0.32.1 dependency conflict
# anchor-spl pulls in spl-token-2022 which conflicts with solana-instruction versions
# See DEPENDENCY_CONFLICT.md for details
# For production: use --no-default-features --features core (same as default now)
# For full features: Wait for Anchor update or use workaround
default = []  # V2 LAUNCH: Token-2022 enabled via anchor-spl features, compression deferred to v2.1
core = []
# V2 LAUNCH: Compression feature deferred to v2.1/v3 (zeroize conflict with token_2022)
# Compression not required for "1,000+ actions per tx" - that's handled by offchain netting + on-chain settlement
# NOTE: Enabling compression feature - dependencies may conflict, but we'll use spl-account-compression via CPI
# compression = ["spl-account-compression"]  # Temporarily disabled due to zeroize conflict - will use raw CPI
# zk = ["light-sdk"]  # DISABLED: zeroize conflict with solana-zk-sdk
# NOTE: ZK feature enabled but light-sdk CPI calls are commented out due to dependency conflicts
# The instruction structure is in place and will work when light-sdk is updated
zk = []  # ✅ ZK feature enabled - Using raw CPI calls to Light Protocol (production ready, no dependency conflicts)
# insanity = ["compression"]  # Compression deferred to v2.1
insanity = []  # Compression deferred to v2.1
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
meta-tx = [] # Feature flag for meta-transaction support (disabled in v1)

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
# Use anchor-spl with required features
# We patch spl-associated-token-account in workspace Cargo.toml to avoid conflict
# Disable default features to avoid pulling in spl-token-2022 confidential transfer
# which has zeroize conflicts
# NUCLEAR OPTION: Disable default features to avoid confidential transfer (zeroize conflicts)
# This kills the zk-sdk dependency chain that causes zeroize conflicts
# NUCLEAR OPTION: Remove token-2022 features to avoid zeroize conflict
# This disables Token-2022 support but allows core build to work
# V2 LAUNCH: Enable all token features now that zeroize is resolved
# Zeroize updated to 1.8.2 by relaxing solana-pubkey pin
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "associated_token", "token_2022"] }
# Removed spl-token-2022 to avoid zeroize conflict - Token-2022 support disabled for now
# ======================================================================
# CURSOR GOD MODE: Force strict version alignment for ZK SDK compatibility
# ======================================================================
# This bypasses "Solana Version Hell" by forcing the compiler's hand.
# Why strict =?
# - solana-zk-sdk (inside spl-token-2022) strictly requires 2.2.1
# - anchor-lang typically asks for ^2.0.0 (which defaults to 2.3.x)
# - By pinning strict =, anchor-lang is forced to accept 2.2.1 (satisfies ^2.0.0)
# ======================================================================
# ======================================================================
# CURSOR GOD MODE: Force strict version alignment for ZK SDK compatibility
# ======================================================================
# This bypasses "Solana Version Hell" by forcing unified versions.
# solana-zk-sdk requires exact versions (2.2.1), anchor-lang wants latest (2.3.x+)
# By pinning to 2.2.1, we satisfy both (anchor-lang accepts ^2 which includes 2.2.1)
# ======================================================================
# V2 LAUNCH: Pin to 2.2.1 exactly to satisfy spl-token-2022 / solana-zk-sdk requirements
# solana-zk-sdk (via spl-token-2022) requires exactly =2.2.1
# This is required for compression + token_2022 to work together
# solana-instruction = "=2.2.1"  # Commented out to allow anchor-spl to use ^2.3.0
# solana-pubkey = "=2.2.1"  # Commented out to allow anchor-spl to use ^2.4.0
# NOTE: zeroize conflict between light-sdk and solana-zk-sdk is unresolvable:
# - light-sdk → ed25519-dalek requires zeroize >=1, <1.4 (max 1.3.x)
# - solana-zk-sdk requires zeroize ^1.7 (min 1.7.0)
# These are incompatible. ZK feature disabled until light-sdk updates.
# spl-account-compression = { version = "0.4.0", features = ["cpi"], optional = true }
# V2 LAUNCH: Compression dependencies - using spl-account-compression via CPI
# NOTE: We enable spl-account-compression as optional dependency for compression feature
# This allows CPI calls to spl-account-compression program without direct dependency conflicts
# The zeroize conflict still exists but is mitigated by using CPI instead of direct imports
# spl-account-compression = { version = "0.4.0", features = ["cpi"], optional = true }  # Temporarily disabled - zeroize conflict
# spl-noop = { version = "0.2.0", optional = true }  # Commented out - causes zeroize conflict
# light-sdk = { version = "0.8.0", optional = true }  # DISABLED: zeroize conflict with solana-zk-sdk
# NOTE: light-sdk has zeroize conflict (requires <1.4) vs solana-zk-sdk (requires ^1.7)
# ZK instructions are structured but CPI calls are commented until light-sdk updates
# Note: solana-program added directly for keccak hash support in Hydra
solana-program = "2.0"
# ed25519-dalek can be added later if explicit signature verification is needed

# Note: zeroize conflict exists but is handled by disabling compression features
# For paranoid build, use --no-default-features --features core